--- a/src/pages/UserCollection/UserCollection.module.scss
+++ b/src/pages/UserCollection/UserCollection.module.scss
@@ -10,3 +10,10 @@
    max-width: 1320px;
    margin: auto;
 }
+.collection-wrap {
+   width: 100%;
+   height: 100%;
+   cursor: pointer;
+   margin-top: 20px;
+   margin-bottom: 40px;
+}
