--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@import '../../style/variables';
 .wrapper {
    width: 100%;
    padding: 10px 20px 10px 20px;
@@ -63,7 +64,7 @@
          justify-content: end;
          align-items: center;
          gap: 20px;
-         flex:1;
+         flex: 1;
          & .submit-btn {
             border-radius: 5px;
             border: 1px solid #d1d1d1;
@@ -84,5 +85,13 @@
             }
          }
       }
+   }
+}
+.nav-link {
+   color: $gray400;
+   transition: 0.3s;
+   cursor: pointer;
+   &:hover {
+      color: #111;
    }
 }
