fix note exel #2

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -11,6 +11,9 @@
          border: none;
       }
    }
+   & .input{
+      width: 100%;
+   }
    & .close-icon {
       position: absolute;
       right: 20px;
