--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -61,6 +61,7 @@ $paddingOption: 20px;
       justify-content: space-between;
       align-items: center;
       padding: 15px 20px;
+      z-index: 5  ;
    }
    & .profile-wrapper {
       display: flex;
